added springboot plugin for packaging

--- a/pom.xml
+++ b/pom.xml
@@ -34,4 +34,13 @@
 
         <!-- Removed explicit spring-boot-starter-tomcat: spring-boot-starter-web brings the embedded Tomcat. -->
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
