--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,10 @@
             <artifactId>pdfbox</artifactId>
             <version>2.0.31</version>
         </dependency>
+             <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-actuator</artifactId>
+</dependency>
 
         <!-- Removed explicit spring-boot-starter-tomcat: spring-boot-starter-web brings the embedded Tomcat. -->
     </dependencies>
