--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 # render.yaml example
 services:
-  - type: web
-    name: my-spring-boot-api
+    type: web
+    name: imageToPdf-service-v1
     env: java
     # ... other configurations ...
     healthCheckPath: /actuator/health
